Prakash-CAC-UIUX-2036-text-alignment-issue

--- a/src/components/Pages/AffiliatePartner/ReferredFromAffiliate/ReferredFromAffiliate.css
+++ b/src/components/Pages/AffiliatePartner/ReferredFromAffiliate/ReferredFromAffiliate.css
@@ -18,3 +18,11 @@
     width: 100%;
   }
 }
+@media only screen and (max-width: 699px) {
+  .congratulationsTextWrap {
+    padding: 0px 20px;
+  }
+  .questionsText {
+    padding: 0px 20px;
+  }
+}
